--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,13 +1,13 @@
 ---
 name: 荒らし連合軍
-description: 荒らし連合の公式サイトです。
+description: 荒らし連合軍の公式サイトです。
 url: https://aarr-jp.github.io
 plugins:
-- jekyll-feed
-- jekyll-sitemap
-- jekyll-seo-tag
+  - jekyll-feed
+  - jekyll-sitemap
+  - jekyll-seo-tag
 defaults:
-- scope:
-    path: ''
-  values:
-    image: "/assets/images/site-image.png"
+  - scope:
+      path: ""
+    values:
+      image: "/assets/images/site-image.png"
