--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@mui/icons-material": "^5.8.0",
     "@mui/material": "^5.8.1",
     "next": "^12.1.6",
-    "next-seo": "^5.4.0"
+    "next-seo": "^5.4.0",
+    "react": "^18.1.0"
   }
 }
