--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@mui/material": "^5.8.1",
     "next": "^12.1.6",
     "next-seo": "^5.4.0",
-    "react": "^18.1.0"
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0"
   }
 }
