--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -6,6 +6,10 @@ extends:
   - eslint:recommended
   - plugin:react/recommended
   - plugin:@typescript-eslint/recommended
+  - plugin:@next/next/recommended
+settings:
+  react:
+    version: detect
 parser: '@typescript-eslint/parser'
 parserOptions:
   ecmaFeatures:
