--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/aarr-jp/aarr-jp.github.io#readme",
   "devDependencies": {
+    "@next/eslint-plugin-next": "^12.1.6",
     "@types/node": "^17.0.36",
     "@types/react": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
