--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
+NEXT_PUBLIC_PRIMARY_MAIN_COLOR='#c80000'
+NEXT_PUBLIC_SITE_DESCRIPTION=AARR公式サイトでは、活動内容や実績などAARRの最新情報をお届けします。
 NEXT_PUBLIC_SITE_NAME=AARR
+NEXT_PUBLIC_SITE_SHORT_DESCRIPTION=AARR公式サイト
 NEXT_PUBLIC_DISCORD_INVITE_CODE=v5eZAjPqgw
