--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,3 +1,4 @@
+---
 env:
   browser: true
   es2021: true
@@ -5,31 +6,143 @@ env:
 extends:
   - eslint:recommended
   - plugin:react/recommended
-  - plugin:@typescript-eslint/recommended
   - plugin:@next/next/recommended
-settings:
-  react:
-    version: detect
-parser: '@typescript-eslint/parser'
+  - plugin:@typescript-eslint/recommended
+  - plugin:import/recommended
+  - plugin:import/typescript
+overrides: []
+parser: "@typescript-eslint/parser"
 parserOptions:
-  ecmaFeatures:
-    jsx: true
   ecmaVersion: latest
   sourceType: module
 plugins:
   - react
-  - '@typescript-eslint'
+  - "@typescript-eslint"
+  - sort-exports
+  - prefer-arrow
+  - jsx-a11y
+  - typescript-sort-keys
+  - sort-keys-fix
 rules:
+  "@typescript-eslint/member-delimiter-style":
+    - error
+    - multiline:
+        delimiter: comma
+        requireLast: false
+      overrides:
+        interface:
+          multiline:
+            delimiter: semi
+            requireLast: true
+  "@typescript-eslint/semi":
+    - error
+    - always
+  "@typescript-eslint/sort-type-union-intersection-members": error
+  "@typescript-eslint/no-unused-vars":
+    - warn
+    - ignoreRestSiblings: true
+  "@typescript-eslint/ban-ts-comment":
+    - error
+    - ts-expect-error:
+        descriptionFormat: '^: TS\d+ because .+$'
+  arrow-body-style:
+    - error
+    - as-needed
+  spaced-comment:
+    - error
+    - always
+    - markers:
+        - /
+  object-shorthand: error
+  brace-style:
+    - error
+    - 1tbs
+  comma-dangle:
+    - error
+    - never
+  curly: error
+  func-style:
+    - error
+    - expression
+  import/order:
+    - error
+    - alphabetize:
+        order: asc
+      groups:
+        - builtin
+        - external
+        - parent
+        - sibling
+        - index
+        - object
+        - type
+      newlines-between: never
   indent:
     - error
     - 2
+    - SwitchCase: 1
+  jsx-a11y/alt-text: error
+  jsx-a11y/aria-role: error
+  jsx-a11y/no-access-key: error
+  jsx-quotes:
+    - error
+    - prefer-single
   linebreak-style:
     - error
     - unix
+  no-multi-spaces: error
+  prefer-arrow-callback:
+    - error
+    - allowNamedFunctions: true
+  prefer-arrow/prefer-arrow-functions:
+    - error
+    - singleReturnOnly: true
+  prefer-template: error
   quotes:
     - error
     - single
-  semi:
+  react/jsx-boolean-value: error
+  react/jsx-closing-bracket-location: error
+  react/jsx-closing-tag-location: error
+  react/jsx-curly-brace-presence: error
+  react/jsx-curly-spacing: error
+  react/jsx-filename-extension:
     - error
-    - never
-  react/react-in-jsx-scope: off
+    - extensions:
+        - .tsx
+  react/jsx-pascal-case: error
+  react/jsx-tag-spacing:
+    - error
+    - beforeClosing: never
+  react/jsx-wrap-multilines: error
+  react/no-array-index-key: error
+  react/no-multi-comp:
+    - error
+    - ignoreStateless: true
+  react/prefer-stateless-function: error
+  react/react-in-jsx-scope: "off"
+  react/self-closing-comp: error
+  semi: "off"
+  sort-exports/sort-exports:
+    - error
+    - sortDir: asc
+  sort-imports:
+    - error
+    - ignoreDeclarationSort: true
+  sort-keys-fix/sort-keys-fix:
+    - error
+    - asc
+    - caseSensitive: true
+      natural: true
+  typescript-sort-keys/interface:
+    - error
+    - asc
+    - caseSensitive: true
+      natural: true
+      requiredFirst: true
+settings:
+  import/resolver:
+    typescript:
+      alwaysTryTypes: true
+  react:
+    version: detect
