--- a/package.json
+++ b/package.json
@@ -2,42 +2,62 @@
   "name": "aarr-jp.github.io",
   "version": "1.0.0",
   "description": "This is the official website of AARR.",
-  "main": "index.js",
   "scripts": {
-    "dev:clean": "rimraf .next",
-    "dev": "npm run dev:clean && next dev",
-    "build:clean": "npm run dev:clean && rimraf out",
-    "build": "npm run build:clean && next build && next export",
-    "start": "npm run build && next start"
+    "predev": "rimraf ./.next/",
+    "dev": "run-s dev:*",
+    "dev:start": "next dev",
+    "prebuild": "rimraf ./.next/ ./out/",
+    "build": "run-s build:*",
+    "build:build": "next build",
+    "build:export": "next export",
+    "build:sitemap": "next-sitemap --config ./next-sitemap.config.mjs",
+    "bundle-analyze": "cross-env BUNDLE_ANALYZE=true npm start",
+    "prestart": "npm run build",
+    "start": "next start"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/aarr-jp/aarr-jp.github.io.git"
   },
+  "keywords": [
+    "aarr"
+  ],
   "author": "aarr-jp",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/aarr-jp/aarr-jp.github.io/issues"
   },
   "homepage": "https://github.com/aarr-jp/aarr-jp.github.io#readme",
   "devDependencies": {
-    "@next/eslint-plugin-next": "^12.1.6",
-    "@types/node": "^17.0.36",
-    "@types/react": "^18.0.9",
-    "@typescript-eslint/eslint-plugin": "^5.26.0",
-    "@typescript-eslint/parser": "^5.26.0",
-    "eslint": "^8.16.0",
-    "eslint-plugin-react": "^7.30.0",
-    "typescript": "^4.7.2"
+    "@next/bundle-analyzer": "^12.3.1",
+    "@next/eslint-plugin-next": "^12.3.1",
+    "@types/node": "^18.8.4",
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
+    "@typescript-eslint/parser": "^5.40.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.25.0",
+    "eslint-import-resolver-typescript": "^3.5.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-sort-exports": "^0.7.0",
+    "eslint-plugin-sort-keys-fix": "^1.1.2",
+    "eslint-plugin-typescript-sort-keys": "^2.1.0",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2",
+    "typescript": "^4.8.4"
   },
   "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.8.0",
-    "@mui/material": "^5.8.1",
-    "next": "^12.1.6",
-    "next-seo": "^5.4.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.6",
+    "@mui/material": "^5.10.8",
+    "@react-hook/size": "^2.1.2",
+    "localforage": "^1.10.0",
+    "next": "^12.3.1",
+    "next-seo": "^5.5.0",
+    "next-sitemap": "^3.1.24",
+    "nextjs-progressbar": "^0.0.15"
   }
 }
