--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "next": "^12.3.1",
     "next-seo": "^5.5.0",
     "next-sitemap": "^3.1.24",
-    "nextjs-progressbar": "^0.0.15"
+    "nextjs-progressbar": "^0.0.15",
+    "react": "^18.2.0"
   }
 }
