--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "next-seo": "^5.5.0",
     "next-sitemap": "^3.1.24",
     "nextjs-progressbar": "^0.0.15",
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
