add: google search console

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "cSpell.words": [
     "aarr",
     "browserconfig",
+    "Ezdv",
     "imgur",
     "linebreak",
     "localforage",
@@ -14,6 +15,8 @@
     "predev",
     "prestart",
     "progressbar",
+    "qjjj",
+    "ugiv",
     "uprp"
   ],
   "editor.codeActionsOnSave": {
