--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,3 @@
 NEXT_PUBLIC_BASE_URL=https://aarr-jp.github.io/
+NEXT_PUBLIC_GOOGLE_ANALYTICS_MEASUREMENT_ID=G-8KLKQ3M7CS
+NEXT_PUBLIC_GOOGLE_SITE_VERIFICATION=8wcUGIVEzfQjjj-0TTeyXEzdv9xKiIsJ-gfVdU_ngGA
