--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@next/bundle-analyzer": "^12.3.1",
     "@next/eslint-plugin-next": "^12.3.1",
+    "@types/gtag.js": "^0.0.12",
     "@types/node": "^18.8.4",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
@@ -58,7 +59,7 @@
     "next": "^12.3.1",
     "next-seo": "^5.5.0",
     "next-sitemap": "^3.1.24",
-    "nextjs-progressbar": "^0.0.15",
+    "nextjs-progressbar": "^0.0.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
